# vitalocal-garmin

./: .gitignore  LICENSE  README.md  Start GarminGPT.bat  install.sh  pyproject.toml  start.command
garmingpt/: __init__.py  analytics.py  cli.py  dashboard.py  forecast.py  garmin_client.py  insights.py  serve.py
garmingpt/legacy/: __init__.py  baselines.py  briefing.py  store.py
garmingpt/static/: index.html
