[project]
name = "vitalocal"
version = "0.2.0"
description = "VitaLocal — a private, on-device AI health coach for your Garmin: recovery score, 7-day forecasts, and local Ollama predictions, all on your own machine."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.139.0",
    "garminconnect>=0.3.6",
    "garth>=0.8.0",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "uvicorn[standard]>=0.51.0",
]
